fix(os-final proj4-align): rectify process table alignment
use `text-align: right` to solve it.

issue sabertazimi/hust-os-2017#12
issue sabertazimi/hust-os-2017#5
issue sabertazimi/awesome-notes#27

--- a/proj4/css/Process.css
+++ b/proj4/css/Process.css
@@ -19,7 +19,13 @@ ul.process-list {
 
 ul.process-list li {
 	min-height: 5vh;
-    flex: auto;
+    /*min-width: 30%;*/
+    /*max-width: 35%;*/
+    flex: 1;
+}
+
+ul.process-list li:last-child {
+    text-align: right;
 }
 
 ul.process-list:nth-child(2n) {
